[gd_scene load_steps=3 format=3 uid="uid://cd3nau0fvk0iw"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_8lsny"]
[ext_resource type="FontFile" uid="uid://rg16im737d84" path="res://limbo_font__by_alex484000-d5dthys.ttf" id="2_ohwmy"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_8lsny")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -50.5
offset_right = 51.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ohwmy")
theme_override_font_sizes/font_size = 150
text = "GAME TITLE"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ohwmy")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="HowToButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ohwmy")
theme_override_font_sizes/font_size = 50
text = "How To Play"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ohwmy")
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/HowToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
